--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -10,6 +10,10 @@ a.logo {
   color: #d95a88;
 }
 
+h1 {
+  margin-top: 0;
+}
+
 html {
   font-size: 62.5%;
 }
@@ -17,10 +21,15 @@ html {
 body {
   font-size: 2rem;
   font-family: 'PT Sans Narrow', sans-serif;
+  color: #53132a;
 }
 
 .aside {
   text-align: right;
+}
+
+.entry__detail-text {
+  font-size: 2rem;
 }
 
 .footer {
